--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>flutter_webpage</title>
 </head>
 <body>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <script src="main.dart.js"></script>
 </body>
 </html>
